<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".login.LoginView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="Desafio \nConta Corrente"
            android:textColor="@color/defaultTextColor"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/enter_email_login"
            android:inputType="textEmailAddress"
            android:textColor="@color/defaultTextColor"
            android:textColorHint="@color/defaultHintColor" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/enter_password_login"
            android:inputType="numberPassword"
            android:textColor="@color/defaultTextColor"
            android:textColorHint="@color/defaultHintColor" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/access"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>